[package]
name = "osmxq"
version = "2.0.0"
description = "indexed quad format for open street map data"
edition = "2018"
license = "BSD-3-Clause"

[[bin]]
name = "osmxq"
path = "src/bin.rs"

[dependencies]
geohash = "0.11.0"
osmpbf = "0.2.4"
argmap = "1.1.1"
desert = "2.0.0"
lru = "0.6.5"
async-std = { version = "1.9.0", features = ["attributes","unstable"] }
async-trait = "0.1.48"
futures = "0.3.13"
pin-project-lite = "0.2.7"
